fix: layout shift issue for header and footer , latest-news and hero-scroller

--- a/src/assets/less/local.less
+++ b/src/assets/less/local.less
@@ -488,7 +488,7 @@
 @media only screen and (min-width: 0rem) {
   #sbs-523 {
     padding: var(--sectionPadding);
-    padding-top: 31rem;
+    padding-top: 08rem;
 
     @keyframes floatAnimation {
       0% {
@@ -619,8 +619,6 @@
 /* Small Desktop - 1024px */
 @media only screen and (min-width: 64rem) {
   #sbs-523 {
-    padding-top: 13rem;
-
     .cs-container {
       max-width: (1280/16rem);
       flex-direction: row;
@@ -705,7 +703,8 @@
     }
 
     .cs-button-solid {
-      font-size: (16/16rem);
+      font-size: 0.8rem;
+      // font-size: (16/16rem);
       /* 46px - 56px */
       line-height: clamp(2.875em, 5.5vw, 3.5em);
       text-decoration: none;
@@ -1016,6 +1015,7 @@
       }
 
       .cs-button-solid {
+        font-size: 1rem;
         &:before {
           width: 100%;
         }
